# inference_engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bench_logs.txt  build.sh
.devcontainer/: devcontainer.json
dockerfiles/: Dockerfile
inputs/: image_12.ubyte  image_13.ubyte  image_14.ubyte  image_16.ubyte  image_19.ubyte  image_20.ubyte  image_22.ubyte  image_23.ubyte  image_24.ubyte  image_25.ubyte  image_26.ubyte  image_27.ubyte  image_28.ubyte  image_29.ubyte  image_31.ubyte  image_32.ubyte  image_33.ubyte  image_34.ubyte  image_36.ubyte  image_37.ubyte  image_38.ubyte  image_39.ubyte  image_40.ubyte  image_41.ubyte  image_42.ubyte  image_43.ubyte  image_44.ubyte  image_45.ubyte  image_46.ubyte  image_47.ubyte  image_48.ubyte  image_49.ubyte  image_50.ubyte  image_51.ubyte  image_52.ubyte  image_53.ubyte  image_54.ubyte  image_55.ubyte  image_56.ubyte  image_57.ubyte  (+40 more)
model_repository/: mnist.yaml
models/: mnist_conv_ffn.onnx  mnist_ffn.onnx  mnist_ffn_complex.onnx
server/: go.mod  inference_wrapper.cpp  inference_wrapper.h  main.go  onnx-ml.pb.h
src/: CMakeLists.txt  attribute.cpp  attribute.h  conv.cpp  conv.h  cpu_allocator.h  cpu_provider.cpp  cpu_provider.h  cuda_allocator.h  cuda_memory_pool.cu  cuda_memory_pool.h  cuda_provider.cpp  cuda_provider.h  cuda_provider_unoptimized.cpp  cuda_provider_unoptimized.h  device.h  execution_provider.cpp  execution_provider.h  gemm.cpp  gemm.h  gemm_cpu.cpp  gemm_cpu.h  gemm_cuda.cu  gemm_cuda.h  graph.cpp  graph.h  inference_engine.cpp  inference_engine.h  inference_session.cpp  inference_session.h  input_loader.cpp  input_loader.h  kernels.cu  kernels.h  main.cpp  memory_allocator.h  model_config.cpp  model_config.h  model_loader.cpp  model_loader.h  (+12 more)
src/test/: CMakeLists.txt  gemm_bench.cpp  gemm_cuda.cpp  gemm_cuda_test.cpp  gemm_test.cpp  infer_bench.cpp  node_test.cpp  operators_test.cpp  simple_gemm_test  tensor_test.cpp
utils/: infer.py  infer_server.py  matrix.py  mnist.py
